app/integration65.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2019-08-08T16:00:04Z
  labels:
    app: integration65
  name: integration65-service
  namespace: default
  resourceVersion: "3366"
  selfLink: /api/v1/namespaces/default/services/integration65-service
  uid: 95dfbbeb-b9f5-11e9-875e-42010a8000d0
spec:
  clusterIP: 10.0.17.200
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31693
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: integration65
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2019-08-08T15:57:33Z
  generation: 1
  labels:
    app: integration65
  name: integration65
  namespace: default
  resourceVersion: "3173"
  selfLink: /apis/apps/v1/namespaces/default/deployments/integration65
  uid: 3becd434-b9f5-11e9-875e-42010a8000d0
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: integration65
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: integration65
    spec:
      containers:
      - image: gcr.io/integration-genie-udes-backend/integration65-udes@sha256:27b3243040448c5d7c808b0a5aa4fcf2b6e5a30cda357e847453e667bf28f03a
        imagePullPolicy: IfNotPresent
        name: integration65-udes-sha256
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: 2019-08-08T15:59:09Z
    lastUpdateTime: 2019-08-08T15:59:09Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2019-08-08T15:57:33Z
    lastUpdateTime: 2019-08-08T15:59:09Z
    message: ReplicaSet "integration65-54f9755fc9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
